@@ -29,6 +29,8 @@ struct _LevelInfo {
 
 struct _CampaignInfo {
 	std::string Name;
+	int Column;
+	int Row;
 	std::vector<_LevelInfo> Levels;
 };
 
