@@ -1,4 +1,6 @@
 irrlamb 0.2.2 -
+- Moved "Kick" tutorial to "Extreme Tutorials"
+- fixed replays on 32-bit version
 
 irrlamb 0.2.1 - 2015-10-02
 - Redesigned replay screen
